Correct Field, method name to get item

--- a/Layout/IPA-2010/ipa-view.html
+++ b/Layout/IPA-2010/ipa-view.html
@@ -1,7 +1,5 @@
-<script src="../../_catalogs/masterpage/CustomByFPT/js/jquery-1.11.1.min.js"
-        type="text/javascript"></script>
-<script src="../../_catalogs/masterpage/CustomByFPT/js/DuPont_JSLibrary.js"
-        type="text/javascript"></script>
+<script src="../../_catalogs/masterpage/CustomByFPT/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script src="../../_catalogs/masterpage/CustomByFPT/js/DuPont_JSLibrary.js"  type="text/javascript"></script>
 
 <style type="text/css">
     .ms-standardheader {
@@ -740,8 +738,6 @@
 //            //tdiv.css('overflow','auto')
 //        }
     });
-
-
 
     fptinitform = function(){
         ////process attachment
