Fix Edit & View 2010, not using API but FormClient

--- a/Layout/IPA-2010/edit.html
+++ b/Layout/IPA-2010/edit.html
@@ -47,6 +47,7 @@
         display: inline-block;
         padding: 5px 5px 0px 5px;
     }
+
     .ms-rte-layoutszone-inner {
         padding: 0px 5px 0px 20px;
         font-size: 12px;
@@ -63,6 +64,7 @@
         position:absolute;
 
     }
+
     .blankcolumn
     {
         width:15px;
@@ -76,6 +78,7 @@
     .table2 {
         padding: 0.5rem;
     }
+
     .table2 tr>td{
         padding-left: 0.5rem;
         padding-top: 0.5rem;
@@ -89,10 +92,12 @@
     .table3 tr>th {
         background: #c6c6c6;
     }
+
     .table3 tr> td, th {
         border: 1px solid;
 
     }
+
     .table3 tr>td {
         padding-left: 0.5rem;
         padding-top: 0.5rem;
@@ -110,6 +115,14 @@
         text-decoration: none;
     }
 
+    input{
+        font-size: 120%;
+        border-radius: 5px;
+    }
+
+    textarea {
+        padding-left: 20px;
+    }
 
 </style>
 
@@ -624,32 +637,32 @@
                     <th>Actual Date</th>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>NOI Submitted</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>NOI Submitted</span></span></td>
                     <td></td>
                     <td class="ms-formbody"><input class="formField" id="NOI_x0020_Submitted_x0020_Date"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>NOI Approved</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>NOI Approved</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="NOI_x0020_Approved_x0020_Goal_x0"></td>
                     <td class="ms-formbody"><input class="formField" id="NOI_x0020_Approved_x0020_Date"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Team Notified</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Team Notified</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="Team_x0020_Notified_x0020_Goal_x"></td>
                     <td class="ms-formbody"><input class="formField" id="Team_x0020_Notified_x0020_Date"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Search Initiated</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Search Initiated</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="Search_x0020_Initiated_x0020_Goa"></td>
                     <td class="ms-formbody"><input class="formField" id="Search_x0020_Initiated_x0020_Act"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Search Completed</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Search Completed</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="Search_x0020_Completed_x0020_Goa"></td>
                     <td class="ms-formbody"><input class="formField" id="Search_x0020_Completed_x0020_Dat"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Examples Requested</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Examples Requested</span></span></td>
                     <td></td>
                     <td class="ms-formbody"><input class="formField" id="Examples_x0020_Requested_x0020_D"></td>
                 </tr>
@@ -659,7 +672,7 @@
                     <td class="ms-formbody"><input class="formField" id="Examples_x0020_Submitted_x0020_D"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Examples Accepted</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Examples Accepted</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="Examples_x0020_Accepted_x0020_Go"></td>
                     <td class="ms-formbody"><input class="formField" id="Examples_x0020_Accepted_x0020_Da"></td>
                 </tr>
@@ -669,17 +682,17 @@
                     <td class="ms-formbody"><input class="formField" id="Application_x0020_Completed_x0020"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Application Filed</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Application Filed</span></span></td>
                     <td class="ms-formbody"><input class="formField" id="Goal_x0020_Filing_x0020_Date"></td>
                     <td class="ms-formbody"><input class="formField" id="Actual_x0020_Filing_x0020_Date"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Transferred to SBU Date</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Transferred to SBU Date</span></span></td>
                     <td></td>
                     <td class="ms-formbody"><input class="formField" id="TransferSBUDate"></td>
                 </tr>
                 <tr>
-					<td class="ms-formlabe"><span class="ms-standardheader"><span>Dropped Date</span></span></td>
+					<td class="ms-formlabe" style="text-align:left"><span class="ms-standardheader"><span>Dropped Date</span></span></td>
                     <td></td>
                     <td class="ms-formbody"><input class="formField" id="Dropped_x0020_Date"></td>
                 </tr>
